# cppbackend

sprint1/problems/async_server/solution/src/: http_server.cpp  main.cpp
sprint1/problems/cafeteria/solution/src/: cafeteria.h  ingredients.h
sprint1/problems/final_task/solution/: CMakeLists.txt  Dockerfile  README.md
sprint1/problems/final_task/solution/data/: config.json
sprint1/problems/final_task/solution/src/: http_server.cpp  http_server.h  json_loader.cpp  json_loader.h  main.cpp  model.cpp  model.h  request_handler.cpp  request_handler.h  sdk.h  tagged.h
sprint1/problems/map_json/solution/src/: http_server.h  json_loader.cpp  json_loader.h  main.cpp  model.h  request_handler.h
sprint1/problems/restaurant_multi_threaded/solution/src/: main.cpp
sprint1/problems/restaurant_single_threaded/solution/src/: main.cpp
sprint1/problems/sum/solution/: main.cpp
sprint1/problems/sync_server/solution/src/: main.cpp
sprint2/problems/command_line/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/command_line/solution/src/: ApiHandler.cpp  ApiHandler.h  Dog.cpp  Dog.h  GameApp.cpp  GameApp.h  Player.cpp  Player.h  Players.cpp  Ticker.h  coords.h  json_loader.h  main.cpp  model.cpp  model.h  request_handler.cpp
sprint2/problems/game_state/solution/src/: ApiHandler.cpp  ApiHandler.h  Dog.h  GameApp.cpp  Players.cpp  handlers_tools.cpp  handlers_tools.h  model.cpp  model.h  request_handler.h
sprint2/problems/join_game/solution/: CMakeLists.txt
sprint2/problems/join_game/solution/src/: ApiHandler.cpp  ApiHandler.h  Dog.cpp  Dog.h  GameApp.h  GameSession.h  Player.h  PlayerTokens.h  Players.h  handlers_tools.h  http_server.h  json_loader.cpp  logger.cpp  main.cpp  model.cpp  model.h  request_handler.cpp  request_handler.h
sprint2/problems/logger/solution/: my_logger.h
sprint2/problems/move_players/solution/src/: ApiHandler.cpp  ApiHandler.h  Dog.h  GameApp.cpp  GameApp.h  handlers_tools.h  logger.h  model.cpp  model.h
sprint2/problems/server_logging/solution/: CMakeLists.txt  Dockerfile  README.md
sprint2/problems/server_logging/solution/src/: http_server.cpp  http_server.h  logger.cpp  main.cpp  request_handler.cpp  request_handler.h
sprint2/problems/static_content/solution/src/: http_server.h  main.cpp  request_handler.cpp  request_handler.h
sprint2/problems/time_control/solution/src/: ApiHandler.cpp  ApiHandler.h  Dog.cpp  Dog.h  GameApp.cpp  GameApp.h  Player.cpp  Player.h  Players.cpp  Players.h  coords.h  handlers_tools.cpp  handlers_tools.h  model.cpp  model.h
sprint3/problems/find_return/solution/: CMakeLists.txt  conanfile.txt
sprint3/problems/find_return/solution/data/: config.json
sprint3/problems/find_return/solution/src/: Dog.cpp  (+11 more)
sprint3/problems/flamegraph/solution/: shoot.py
sprint3/problems/gen_objects/solution/: CMakeLists.txt  Dockerfile  conanfile.txt
sprint3/problems/gen_objects/solution/src/: ApiHandler.cpp  GameApp.cpp  GameApp.h  json_loader.cpp  json_loader.h  main.cpp  model.cpp  model.h
sprint3/problems/instrumentation/solution/: README.md  report
sprint3/problems/scores/solution/: CMakeLists.txt
sprint3/problems/static_lib/solution/: CMakeLists.txt
sprint4/problems/bookypedia-2/solution/: CMakeLists.txt  conanfile.txt
sprint4/problems/db_of_books/solution/: CMakeLists.txt  main.cpp  queries.txt
sprint4/problems/leave_game/solution/: CMakeLists.txt  Dockerfile  conanfile.txt
sprint4/problems/state_serialization/solution/: CMakeLists.txt  Dockerfile  conanfile.txt
sprint4/problems/state_serialization/volume/: saved.txt
(+107 files in other folders)
